<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    tools:context=".TransactionDetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="11.7dp"
                android:background="@color/white">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:paddingTop="14.3dp"
                    android:paddingLeft="18.3dp">
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="11.7sp"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textColor="@color/geryTxt"
                        android:text="@string/transaction_id"
                        />
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:layout_marginTop="5.7dp"
                        android:textColor="@color/black_txt_Color"
                        android:text="@string/pay2313114422"
                        />
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="11.7sp"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:layout_marginTop="17.3dp"
                        android:textColor="@color/geryTxt"
                        android:text="@string/transacted_on"
                        />
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textColor="@color/black_txt_Color"
                        android:text="@string/_28_apr_2018_sat_10_33_p_m"
                        />

                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/copy"
                    android:layout_marginRight="18.3dp"
                    android:layout_marginTop="21dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:paddingLeft="16.7dp"
                android:layout_marginTop="11.7dp"
                android:orientation="horizontal"
                android:background="@color/white">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/mobile_1"
                    android:layout_gravity="center_vertical"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="16.3dp">
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="11.7sp"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textColor="@color/geryTxt"
                        android:text="@string/mobile_recharged"
                        />
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textColor="@color/black_txt_Color"
                        android:text="@string/_9382332131"
                        android:layout_marginTop="11dp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                    android:paddingRight="20dp">
                    <customfonts.MyTextView_Roboto_Medium
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18.3sp"
                        android:fontFamily="sans-serif-medium"
                        android:textStyle="normal"
                        android:layout_gravity="right"
                        android:textColor="@color/black_txt_Color"
                        android:text="@string/_50"
                        />
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10sp"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textColor="@color/green"
                        android:gravity="end"
                        android:layout_marginTop="8dp"
                        android:text="@string/successful"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="76.3dp"
                android:orientation="vertical"
                android:layout_marginTop="11.7dp"
                android:gravity="center_vertical"
                android:paddingLeft="18.3dp"
                android:background="@color/white">
                <customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11.7sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/geryTxt"
                    android:text="@string/debited_from"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/visa"
                        android:layout_gravity="center_vertical"/>
                    <customfonts.MyTextView_Roboto_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:paddingLeft="6.3dp"
                        android:fontFamily="sans-serif"
                        android:textStyle="normal"
                        android:textColor="#222426"
                        android:text="@string/_1700_xxxx_xxxx_1982"
                        />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/white"
        android:paddingLeft="18.3dp"
        android:elevation="5dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:src="@drawable/help"/>
        <customfonts.MyTextView_Roboto_Regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13.3sp"
            android:paddingLeft="11.7dp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black_txt_Color"
            android:text="@string/need_help_about_this_transaction"
            />
    </LinearLayout>

</RelativeLayout>