<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="11.3dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:id="@+id/iconImage"
            android:src="@drawable/mobile_1"/>
        <customfonts.MyTextView_Roboto_Regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:id="@+id/billName"
            android:layout_weight="1"
            android:layout_marginLeft="14dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/black_txt_Color"
            android:text="@string/mobile_recharged"
            />
        <customfonts.MyTextView_Roboto_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18.3sp"
            android:id="@+id/amount"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:layout_marginRight="20dp"
            android:textColor="@color/black_txt_Color"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            android:text="@string/_50"
            />
    </LinearLayout>
    <customfonts.MyTextView_Roboto_Regular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11.7sp"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:paddingLeft="63.7dp"
        android:id="@+id/phnNo"
        android:textColor="@color/geryTxt"
        android:text="@string/_9382332131"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">
        <customfonts.MyTextView_Roboto_Regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/black_txt_Color"
            android:text="@string/debited_from"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/visa"
            android:paddingLeft="4.3dp"
            android:paddingRight="20dp"
            android:id="@+id/debitLogo"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f4f4f4"
        android:layout_marginTop="9.3dp"/>

</LinearLayout>