<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="162.3dp"
    android:layout_marginTop="11.7dp"
    android:layout_marginRight="11.7dp"
    android:layout_marginLeft="11.7dp"
    android:layout_marginBottom="2dp"
    android:elevation="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="17.3dp"
                android:layout_height="17.3dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/bankLogo"
                android:src="@drawable/bank"/>
            <customfonts.MyTextView_Roboto_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bankName"
                android:textSize="13.3sp"
                android:paddingLeft="7dp"
                android:fontFamily="sans-serif"
                android:layout_weight="1"
                android:textStyle="normal"
                android:textColor="@color/black_txt_Color"
                android:text="@string/bank_name"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:id="@+id/cardLogo"
                android:src="@drawable/visa"/>
        </LinearLayout>

        <customfonts.MyTextView_Roboto_LightItalica
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/card"
            android:background="@drawable/rect1"
            android:fontFamily="sans-serif-light"
            android:text="@string/cc"
            android:paddingLeft="3.7dp"
            android:paddingRight="3.7dp"
            android:paddingTop="2dp"
            android:layout_marginTop="5dp"
            android:paddingBottom="2dp"
            android:layout_marginRight="14dp"
            android:textColor="#a6a6a6"
            android:textSize="10sp"
            android:textStyle="normal" />
        <customfonts.MyTextView_Roboto_Medium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16.7sp"
            android:id="@+id/cardNo"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:textColor="@color/black_txt_Color"
            android:text="@string/_4029_1213"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            />
        <customfonts.MyTextView_Roboto_Regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:id="@+id/cardHolderName"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/black_txt_Color"
            android:text="@string/john_doe"
            />
        <customfonts.MyTextView_Roboto_Regular
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8.3sp"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:textColor="@color/geryTxt"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="9dp"
            android:text="Valid Till"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1.7dp">
            <customfonts.MyTextView_Roboto_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13.3sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:id="@+id/date"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black_txt_Color"
                android:text="@string/_01_21"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/option"
                android:layout_marginRight="20dp"/>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>