<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f6f6f6"
    tools:context=".MyTransactionActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="178.3dp"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="16.7dp">
            <customfonts.MyTextView_Roboto_Regular
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:textColor="@color/bg_blue"
                android:gravity="center_horizontal"
                android:text="@string/my_transactions"
                />
            </LinearLayout>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search"
                android:layout_marginRight="21.3dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="94.3dp"
            android:elevation="5dp"
            app:cardCornerRadius="3dp"
            android:layout_marginLeft="16.7dp"
            android:layout_marginRight="16.7dp"
            android:layout_marginTop="25dp"
            android:background="@color/bg_blue">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/bg_blue">
                <customfonts.MyTextView_Roboto_Regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:paddingLeft="23.3dp"
                    android:paddingTop="16.7dp"
                    android:textColor="#8Cffffff"
                    android:text="@string/wallet_balance"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/plus_btn"
                    android:layout_gravity="right"
                    android:layout_marginTop="-5dp"
                    android:layout_marginBottom="-10dp"
                    android:layout_marginRight="18dp"/>
                <customfonts.MyTextView_Roboto_Light
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="normal"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="23.3dp"
                    android:text="@string/_1_500_20"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ececec"/>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <customfonts.MyTextView_Roboto_Medium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11.7sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="@color/geryTxt"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="17dp"
        android:text="@string/mon_15_feb_balance_36_131_45"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ececec"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:id="@+id/recyclerView"
        android:nestedScrollingEnabled="false"
        android:background="@color/white">
    </android.support.v7.widget.RecyclerView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ececec"/>
    <customfonts.MyTextView_Roboto_Medium
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11.7sp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:textColor="@color/geryTxt"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="17dp"
        android:text="@string/mon_15_feb_balance_36_131_45"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ececec"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:id="@+id/recyclerView1"
        android:nestedScrollingEnabled="false"
        android:background="@color/white"
        android:paddingBottom="60dp">
    </android.support.v7.widget.RecyclerView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#ececec"/>
        </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
    <com.roughike.bottombar.BottomBar
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="52.6dp"
        android:layout_alignParentBottom="true"
        android:background="#fff"
        android:elevation="8dp"
        android:gravity="bottom|end"
        android:layout_gravity="bottom"
        app:bb_activeTabColor="#ffffff"
        app:bb_badgesHideWhenActive="true"
        app:bb_inActiveTabColor="#a4ebfe"
        app:bb_showShadow="true"
        app:bb_tabXmlResource="@xml/tab"
        app:bb_titleTextAppearance="@style/botoombar_textchange"
        app:bb_titleTypeFace="fonts/Roboto-Regular.ttf"
        app:paddingStart="10dp" />


</RelativeLayout>